@@ -28,6 +28,7 @@ ChangeLog
 [-] * Introduced backward compatibility of gammu.StateMachine.SetConfig.
 [-] * Experimental dku-2 userspace driver using libusb-1.0 (fbususb).
 [-] * python-gammu can now inject messages into SMSD.
+[+] * SMSD stores summary counts of sent/received messages in database.
     
 20090126 - 1.22.92
 
